adiciona exercicio corretor

--- a/tarefa10/Makefile
+++ b/tarefa10/Makefile
@@ -5,8 +5,11 @@ LDFLAGS = -lm
 
 all: corretor
 
-corretor: corretor.c
-	gcc $(CFLAGS) corretor.c -o corretor $(LDFLAGS)
+corretor: corretor_main.c
+	gcc $(CFLAGS) -c corretor_funcoes.c $(LDFLAGS)
+	gcc $(CFLAGS) -c corretor_main.c $(LDFLAGS)
+	gcc $(CFLAGS) -o corretor corretor_main.o corretor_funcoes.o $(LDFLAGS)
 
 clean:
 	rm -f corretor
+	rm -f *.o
